# sslab

./: .gitattributes  .gitignore  AGENTS.md  package-lock.json  request.md  run_peer_training.py
federated-learning/: README.md  pyproject.toml  uv_err.txt
semantic-net/: .dockerignore  .gitignore  Dockerfile  IoU_Skipped.txt  README-jp.md  README.md  check_cuda.py  docker-compose.yml  error.txt  pyproject.toml  result_b0.txt  result_b1.txt  result_b2_error.txt  run_fed_client.py  run_single.py  selector_latency.txt
semantic-net-manylinux/: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  python-deps.py  summarize_miou.py  tree.txt
semantic-net-manylinux/.github/workflows/: ci.yml
semantic-net-manylinux/checkpoints_segformer_b0/: best_segformer_b0.pt  last_segformer_b0.pt
semantic-net-manylinux/checkpoints_segformer_b1/: best_segformer_b1.pt  last_segformer_b1.pt
semantic-net-manylinux/checkpoints_segformer_b2/: best_segformer_b2.pt  last_segformer_b2.pt
semantic-net-manylinux/checkpoints_segformer_b3/: best_segformer_b3.pt
semantic-net-manylinux/checkpoints_selector/: selector_lambda_0.0010.pt  selector_lambda_0.0100.pt  selector_lambda_0.0200.pt
semantic-net-manylinux/configs/: task_disaster.yaml
semantic-net-manylinux/scripts/: smoke.py
semantic-net-manylinux/src/: calculate_model_cost.py  eval_segformer.py  eval_segformer_fp16.py  measure_latency_jetson.py  precompute_values.py  run_single.py  save_b0_state_dict.py  selector_evaluate_policy_on_split.py  train_model_selector.py  train_segformer_b0.py  train_segformer_b1.py  train_segformer_b2.py  train_segformer_b3.py
semantic-net-manylinux/src/dataset/: rescuenet_patches.py  resize.py  tree.txt
semantic-net-manylinux/src/dataset/RescueNet_patches/: __init__.py  show_count.py
semantic-net-manylinux/src/federated/: client.py  server.py
semantic-net-manylinux/src/semantic/: rate_controller.py
semantic-net-manylinux/src/task/: __init__.py
semantic-net-manylinux/src/task/netqos/: model.py  preprocess.py
semantic-net/checkpoints_selector/: selector_lambda_0.0010.pt  selector_lambda_0.0050.pt
semantic-net/configs/: base.yaml  task_disaster.yaml  task_netqos.yaml
semantic-net/federated/: client.py  server.py
semantic-net/semantic/: decoder.py
semantic-net/src/: measure_latency-IoU_selector.py  measure_latency_jetson.py  measure_latency_selector.py  run_fed_server.py
semantic-net/src/dataset/: __init__.py
semantic-net/src/dataset/RescueNet_patches/: Dataset.py
semantic-net/src/federated/: __init__.py
semantic-net/src/semantic/: __init__.py  encoder.py
semantic-net/src/semantic_net.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
semantic-net/src/task/disaster/: preprocess.py
semantic-net/src/task/netqos/: metrics.py
semantic-net/src/transport/: __init__.py  ad_hoc.py  proto.py
semantic-net/task/disaster/: __init__.py  metrics.py  model.py
semantic-net/task/netqos/: __init__.py
semantic-net/wheels/: torchvision-0.18.0a0+6043bc2-cp310-cp310-linux_aarch64.whl  torchvision-0.19.0a0+48b1edf-cp310-cp310-linux_aarch64.whl  torchvision-0.20.0a0+afc54f7-cp310-cp310-linux_aarch64.whl
