[project]
name = "semantic-net-manylinux"
version = "0.1.0"
description = "Federated semantic communication experiments (x86_64: CPU / CUDA 12.8 / ROCm)."
readme = "README.md"
# requires-python = ">=3.10,<3.13"
requires-python = ">=3.10,<3.12"
license = "MIT"
authors = [{ name = "koh1123813" }]
dependencies = [
  "numpy>=1.24,<2.0",
  "pyyaml>=6.0",
  "flwr>=1.7",
  # Torch-family dependencies are chosen via extras
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["run_single", "run_fed_client", "run_fed_server"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
semantic-run-single = "run_single:main"
semantic-run-fed-client = "run_fed_client:main"
semantic-run-fed-server = "run_fed_server:main"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
